<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calendar Colors</string>
    <string name="title_activity_choose_calendar">Calendar Colors</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="cal_nf">Calendars not found</string>
    <string name="title_activity_change_color">Change Color</string>
    <string name="txtRed">Red</string>
    <string name="txtGreen">Green</string>
    <string name="txtBlue">Blue</string>
    <string name="txtAlpha">Alpha</string>
    <string name="btnSave">DONE</string>
    <string name="btnCancel">CANCEL</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">        Credits Artem S. Savenkov</string>
    <string name="show_all">Show hidden</string>
    <string name="settings_bg_color_confirm">Confirm</string>
    <string name="settings_default_color_confirm">Confirm default</string>
    <string name="settings_bg_color_dialog">Choose a color</string>
    <string name="choose">Choose</string>
    <string name="color_disclaimer">Tap on color to open color picker dialog</string>
</resources>
