<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.bojo.calendarcolors.ChangeColor"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtRed"
            android:id="@+id/textRed"
            android:minWidth="100dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbRed"
            android:layout_weight="0.97"
            android:max="255" />

        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numRed"
            android:text="0"
            android:phoneNumber="false"
            android:maxLength="3"
            android:numeric="integer" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtGreen"
            android:id="@+id/textGreen"
            android:minWidth="100dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbGreen"
            android:layout_weight="0.97"
            android:max="255" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numGreen"
            android:width="48dp"
            android:text="0"
            android:textAlignment="center"
            android:maxLength="3"
            android:numeric="integer" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtBlue"
            android:id="@+id/textBlue"
            android:minWidth="100dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbBlue"
            android:layout_weight="0.97"
            android:max="255" />

        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numBlue"
            android:text="0"
            android:textAlignment="center"
            android:maxLength="3"
            android:numeric="integer" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAlpha"
            android:id="@+id/textAlpha"
            android:minWidth="100dp" />

        <SeekBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sbAlpha"
            android:layout_weight="0.97"
            android:max="255" />

        <EditText
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/numAlpha"
            android:text="0"
            android:textAlignment="center"
            android:maxLength="3"
            android:numeric="integer" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="54dp"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/oldColor"
            android:minWidth="105dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/newColor"
            android:layout_weight="0.17"
            android:minWidth="105dp" />

        <EditText
            android:layout_width="137dp"
            android:layout_height="match_parent"
            android:id="@+id/hexColor"
            android:maxLength="7"
            android:enabled="true"
            android:editable="false"
            android:lines="1"
            android:text="#000000"
            android:textSize="28dp" />

    </LinearLayout>

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryColor"
            android:text="@string/btnCancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_row="1"
            android:layout_column="10"
            android:paddingRight="30dp"
            android:id="@+id/btnCancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/btnSave"
            android:background="@color/primaryColor"
            style="?android:attr/borderlessButtonStyle"
            android:layout_row="1"
            android:layout_column="11"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:id="@+id/btnSave" />

    </GridLayout>

</LinearLayout>
